fix github button wrapping to new line

--- a/website/src/styles/index.module.scss
+++ b/website/src/styles/index.module.scss
@@ -120,7 +120,7 @@
 }
 
 .githubButton {
-  width: 212px;
+  width: 215px;
   padding: 0 12px;
   display: inline-flex;
   align-items: center;
